force-app/main/default/objects/Finance_Fee_Chart__mdt/Finance_Fee_Chart__mdt.object-meta.xml
<CustomObject>
    <label>Finance Fee Chart</label>
    <pluralLabel>Finance Fee Charts</pluralLabel>
</CustomObject>