force-app/main/default/objects/Finance_Fee_Chart__mdt/fields/Ceiling__c.field-meta.xml
<CustomField>
    <fullName>Ceiling__c</fullName>
    <label>Ceiling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>