force-app/main/default/objects/Finance_Fee_Chart__mdt/fields/Finance_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Finance_Fee_Rate__c</fullName>
    <label>Finance Fee Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>